[gd_scene load_steps=5 format=3 uid="uid://cfe2pxeqwokec"]

[ext_resource type="PackedScene" uid="uid://bf1t5p78ivl55" path="res://ui/components/buttons/button_custom.tscn" id="1_fsom3"]
[ext_resource type="Script" uid="uid://bkahph5xexry8" path="res://scenes/main_menu/main_menu.gd" id="1_uqeha"]
[ext_resource type="PackedScene" uid="uid://bgs038jmr8ivf" path="res://ui/components/labels/fracto_title.tscn" id="2_0ebjn"]
[ext_resource type="Theme" uid="uid://bbud5i878nklp" path="res://ui/components/labels/session_config.tres" id="2_ob46e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqeha")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.47058824, 0.3254902, 0.972549, 1)

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -320.0
offset_right = 160.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="FractoTitle" parent="Layout" instance=ExtResource("2_0ebjn")]
layout_mode = 2

[node name="SessionConfig" type="VBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/SessionConfig"]
layout_mode = 2
theme = ExtResource("2_ob46e")
text = "Sesión activa:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Layout/SessionConfig"]
layout_mode = 2
theme = ExtResource("2_ob46e")
text = "Universidad Veracruzana LIS-701"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="MenuButtons" type="VBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="Configure" parent="Layout/MenuButtons" instance=ExtResource("1_fsom3")]
layout_mode = 2
text = "Configurar sesión"

[node name="Start" parent="Layout/MenuButtons" instance=ExtResource("1_fsom3")]
layout_mode = 2

[node name="Stats" parent="Layout/MenuButtons" instance=ExtResource("1_fsom3")]
layout_mode = 2
text = "Estadísticas
"

[node name="About" parent="Layout/MenuButtons" instance=ExtResource("1_fsom3")]
layout_mode = 2
text = "Acerca de"

[node name="ColorRect" type="ColorRect" parent="Layout"]
layout_mode = 2

[connection signal="pressed" from="Layout/MenuButtons/Configure" to="." method="_on_configure_pressed"]
[connection signal="pressed" from="Layout/MenuButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Layout/MenuButtons/Stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="Layout/MenuButtons/About" to="." method="_on_about_pressed"]
